crates/plotnik-tests/tests/03-analyze/anchors/boundary_anchors_both_ends.txt
Q = {
  .
  (a)
  .
}
------------------ DIAGNOSTICS -------------------
error: anchor needs an enclosing node
 --> query.ptk:2:3
  |
2 |   .
  |   ^
  |
help: move the anchor and its neighboring pattern inside a named node

error: anchor needs an enclosing node
 --> query.ptk:4:3
  |
4 |   .
  |   ^
  |
help: move the anchor and its neighboring pattern inside a named node
------------------ DEFINITIONS -------------------
